# KIRA

./: .gitignore  LICENSE  README.md  all_requirements.txt  index.html  package-lock.json  package.json  pyproject.toml
.github/workflows/: tests.yml
Backend/trip-planner/: main.py
Docker/: docker-compose.yml
src/: .env.example  .gitignore  docker-compose.yml  draft.yml
src/Backend/: api.py  ingest_with_llamaindex.py  requirements.txt
src/Backend/Ingester/: Dockerfile  emb_test.py  ingest_v2.py  ingest_with_llamaindex.py  ingestor_gemini.py  ingestor_v2.py  requirements.txt
src/Backend/api-gateway/: chat_ws.py  client.py  main.py  mcp_tools.py  requirements.txt
src/Backend/api_gateway/: client.py  main.py  requirements.txt
src/Backend/trip-planner/: main.py  models.py  otp_queries.py  otp_service.py  requirements.txt
src/Backend/trip_planner/: storage_opensearch.py  test_fischen.py
src/Frontend/: App.jsx  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/MCP/: Dockerfile  agent_server.py  backend_api.py  client_cli.py  find_kempten.py  mcp_azure_host.py  requirements.txt  server.py
src/MCP/Backup/: agent_server.py
src/Neo4j/: neo4j_json_importer.py  upload_data.py
src/Opensearch/: otp_service.py  requirements.txt  sync_gtfs_stops.py  upload_infrastructure.py  upload_plan.py
tests/: conftest.py
tests/backend/api_gateway/: test_api_gateway.py
trip-ai/: package-lock.json  package.json
trip-ai/src/: App.jsx
trip-ai/src/Frontend/: App.jsx  index.html
