[project]
name = "kira"
version = "1.0.0"
description = "AI asssited trip planner"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anyio>=4.12.1",
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]==0.128.0",
    "fastmcp>=2.14.4",
    "httpx==0.28.1",
    "llama-index>=0.14.13",
    "llama-index-embeddings-azure-openai>=0.4.1",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-vector-stores-opensearch>=1.0.0",
    "lxml>=6.0.2",
    "mcp>=1.26.0",
    "openai>=2.16.0",
    "opensearch-py>=3.1.0",
    "pydantic==2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "shapely>=2.1.2",
    "uvicorn[standard]==0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.package-dir]
"" = "src"